pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constExplicitThisMethod.pkl
open class A {
  function a() = 1
}

class B extends A {
  const b = this.a()
}

b: B
